# net_calculator

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  display.c  display.h  net.c  net.h  net_calculator  net_tool  net_tool.c  network_calcs.c  network_calcs.h  pyproject.toml  utils.c  utils.h
.github/workflows/: ci.yml
src/netcalc/: __init__.py  __main__.py  cli.py  core.py  display.py
tests/: test_core.py  test_network_calcs.c
